--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-navigation-menu": "^1.2.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-dropdown-menu": "2.1.2",
+    "@radix-ui/react-navigation-menu": "1.2.1",
+    "@radix-ui/react-popover": "1.1.2",
+    "@radix-ui/react-separator": "1.1.0",
+    "@radix-ui/react-slot": "1.1.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "embla-carousel-autoplay": "8.5.1",
-    "embla-carousel-react": "^8.5.1",
+    "embla-carousel-react": "8.5.1",
     "lucide-react": "0.460.0",
     "next": "15.0.3",
-    "next-themes": "^0.4.3",
+    "next-themes": "0.4.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tailwind-merge": "2.5.4",
