--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "1.1.0",
     "@radix-ui/react-toast": "^1.2.2",
+    "@stripe/react-stripe-js": "3.0.0",
+    "@stripe/stripe-js": "5.2.0",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "embla-carousel-autoplay": "8.5.1",
